--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -187,4 +187,8 @@
 		</Compile>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Client\Services\LogsApi\Typed\" />
+	</ItemGroup>
+
 </Project>
