--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="Keysmith.Net" Version="1.3.0" />
 		<PackageReference Include="Keysmith.Net.Secp256k1" Version="1.3.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
