--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -26,7 +26,7 @@
 
 	<ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
-    <PackageReference Include="EtherSharp.Generator" Version="1.0.0" />
+    <PackageReference Include="EtherSharp.Generator" Version="0.9.0-beta" />
     <PackageReference Include="Nethereum.HdWallet" Version="4.26.0" />
     <PackageReference Include="Nethereum.RLP" Version="4.26.0" />
     <PackageReference Include="Nethereum.Util" Version="4.26.0" />
