--- a/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -14,6 +14,7 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PackageIcon>logo.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,4 +37,7 @@
 		<ProjectReference Include="..\..\EtherSharp\EtherSharp.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="../../../resources/logo.png" Pack="true" PackagePath="" />
+	</ItemGroup>
 </Project>
