--- a/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -15,6 +15,7 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageIcon>logo.png</PackageIcon>
+		<AnalysisLevel>latest</AnalysisLevel>
 	</PropertyGroup>
 
 	<ItemGroup>
