--- a/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/contracts/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -31,7 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EtherSharp.Generator" Version="0.9.0-beta" />
+		<PackageReference Include="EtherSharp.Generator" Version="$(EthersharpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
