--- a/.github/workflows/test-and-publish-to-nuget.yml
+++ b/.github/workflows/test-and-publish-to-nuget.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Add local NuGet source
         run: dotnet nuget add source /local-nuget --name LocalNuGetSource
 
-      - name: Build EtherSharp
-        run: cd src/EtherSharp && dotnet publish --configuration Release --output /local-nuget
-        
+      - name: Build EtherSharp.Generator
+        run: cd src/EtherSharp.Generator && dotnet publish --configuration Release --output /local-nuget
+
       - name: Restore dependencies
         run: dotnet restore
 
