--- a/.github/workflows/test-and-publish-to-nuget.yml
+++ b/.github/workflows/test-and-publish-to-nuget.yml
@@ -23,7 +23,7 @@ jobs:
         run: mkdir ./local-nuget
 
       - name: Add local NuGet source
-        run: dotnet nuget add source ./local-nuget --name LocalNuGetSource
+        run: dotnet nuget add source ${{ github.workspace }}/local-nuget --name LocalNuGetSource
 
       - name: Build EtherSharp.Generator
         run: cd src/EtherSharp.Generator && dotnet publish --configuration Release --output ../../local-nuget
