--- a/.github/workflows/test-and-publish-to-nuget.yml
+++ b/.github/workflows/test-and-publish-to-nuget.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet nuget add source ${{ github.workspace }}/local-nuget --name LocalNuGetSource
 
       - name: Build EtherSharp.Generator
-        run: cd src/EtherSharp.Generator && dotnet pack --configuration Release --output ${{ github.workspace }}/local-nuget
+        run: cd src/EtherSharp.Generator && dotnet build --configuration Release && dotnet pack --configuration Release --output ${{ github.workspace }}/local-nuget
 
       - name: Restore dependencies
         run: dotnet restore
