--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -27,8 +27,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EtherSharp.Generator" Version="$(EthersharpVersion)" />
 		<PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
-		<PackageReference Include="EtherSharp.Generator" Version="0.9.0-beta" />
 		<PackageReference Include="Nethereum.HdWallet" Version="4.29.0" />
 		<PackageReference Include="Nethereum.RLP" Version="4.29.0" />
 		<PackageReference Include="Nethereum.Util" Version="4.29.0" />
