--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -30,6 +30,7 @@
 		<PackageReference Include="Keysmith.Net" Version="1.3.0" />
 		<PackageReference Include="Keysmith.Net.Secp256k1" Version="1.3.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.Abstractions" Version="9.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
 	</ItemGroup>
 
