--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -155,6 +155,10 @@
 		  <LastGenOutput>PackedAbiEncoder.SizedBytes.cs</LastGenOutput>
 		  <Generator>TextTemplatingFileGenerator</Generator>
 		</None>
+		<None Update="Client\Modules\Query\QueryBuilder.AddQuery.tt">
+		  <Generator>TextTemplatingFileGenerator</Generator>
+		  <LastGenOutput>QueryBuilder.AddQuery.cs</LastGenOutput>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -287,6 +291,11 @@
 		  <DependentUpon>PackedAbiEncoder.SizedBytes.tt</DependentUpon>
 		  <DesignTime>True</DesignTime>
 		  <AutoGen>True</AutoGen>
+		</Compile>
+		<Compile Update="Client\Modules\Query\QueryBuilder.AddQuery.cs">
+		  <DesignTime>True</DesignTime>
+		  <AutoGen>True</AutoGen>
+		  <DependentUpon>QueryBuilder.AddQuery.tt</DependentUpon>
 		</Compile>
 	</ItemGroup>
 
