feat: add flash caller contracts

--- a/src/EtherSharp.ERC/EtherSharp.ERC.csproj
+++ b/src/EtherSharp.ERC/EtherSharp.ERC.csproj
@@ -26,6 +26,8 @@
 		<None Remove="ERC20\erc20.abi.json" />
 		<None Remove="ERC4626\erc4626.abi.json" />
 		<None Remove="ERC721\erc721.abi.json" />
+		<None Remove="FlashCaller\flash-caller.abi.json" />
+		<None Remove="FlashCaller\flash-caller.bytecode" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -33,6 +35,8 @@
 		<AdditionalFiles Include="ERC4626\erc4626.abi.json" />
 		<AdditionalFiles Include="ERC721\erc721.abi.json" />
 		<AdditionalFiles Include="ERC1155\erc1155.abi.json" />
+		<AdditionalFiles Include="FlashCaller\flash-caller.abi.json" />
+		<AdditionalFiles Include="FlashCaller\flash-caller.bytecode" />
 	</ItemGroup>
 
 	<ItemGroup>
